--- a/index.html
+++ b/index.html
@@ -5,7 +5,26 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+   <div>
+     <h1>Hello World!</h1>
+     </div>
+    <div>
+        <h2>My name is Syed Hamza, welcome to my website!</h2>
+    </div>    
+    <div>
+        <h3>A Quick Bio</h3>
+        <p>
+            I'm a 21 year old New York City native with little experiece in coding, but some experience in the sales/customer service and IT Support industries. I hope to utilize this course to jumpstart my career in coding so that I can at least create websites better looking than this one. My hobbies include playing video games such as Valorant, League of Legends(TFT), and Grand Theft Auto 5. I also enjoy building and repairing computers whether its just to install/replace certain parts or repairing a damaged CPU/GPU. 
+        
+        </p>
+        <h6>To whomever is viewing this website, I apologize if it is a bit barebones. Unfortunately due to conditions out of my control I was forced to build this website on a rather strict time constraint. I can only hope that I'm able to improve this site to the best of my capabilities over time. Until then, please bear with me.</h6>
+        <h4>
+            My Apologies
+        </h4>
+    </div>
+    <div>
+        
+    </div>    
     <script src="script.js"></script>
   </body>
 </html>
